@@ -29,7 +29,7 @@ Thibault Cohen
 Davide Cecchetto (dcec)
 Dene Tariko
 Olivier Li-Kiang-Cheong (lkco)
-awiddersheim
+Andrew Widdersheim (awiddersheim)
 Jean Prat (saez0pub)
 Feraudet Cyril
 Mathieu Parent (sathieu)
