@@ -1030,15 +1030,16 @@ sub _set_host_macros {
     my $c = $Thruk::Backend::Manager::c;
 
     # normal host macros
-    $macros->{'$HOSTADDRESS$'}        = (defined $host->{'host_address'})         ? $host->{'host_address'}         : $host->{'address'};
-    $macros->{'$HOSTNAME$'}           = (defined $host->{'host_name'})            ? $host->{'host_name'}            : $host->{'name'};
-    $macros->{'$HOSTALIAS$'}          = (defined $host->{'host_alias'})           ? $host->{'host_alias'}           : $host->{'alias'};
-    $macros->{'$HOSTSTATEID$'}        = (defined $host->{'host_state'})           ? $host->{'host_state'}           : $host->{'state'};
-    $macros->{'$HOSTLATENCY$'}        = (defined $host->{'host_latency'})         ? $host->{'host_latency'}         : $host->{'latency'};
-    $macros->{'$HOSTOUTPUT$'}         = (defined $host->{'host_plugin_output'})   ? $host->{'host_plugin_output'}   : $host->{'plugin_output'};
-    $macros->{'$HOSTPERFDATA$'}       = (defined $host->{'host_perf_data'})       ? $host->{'host_perf_data'}       : $host->{'perf_data'};
-    $macros->{'$HOSTATTEMPT$'}        = (defined $host->{'host_current_attempt'}) ? $host->{'host_current_attempt'} : $host->{'current_attempt'};
-    $macros->{'$HOSTCHECKCOMMAND$'}   = (defined $host->{'host_check_command'})   ? $host->{'host_check_command'}   : $host->{'check_command'};
+    $macros->{'$HOSTADDRESS$'}        = (defined $host->{'host_address'})            ? $host->{'host_address'}            : $host->{'address'};
+    $macros->{'$HOSTNAME$'}           = (defined $host->{'host_name'})               ? $host->{'host_name'}               : $host->{'name'};
+    $macros->{'$HOSTALIAS$'}          = (defined $host->{'host_alias'})              ? $host->{'host_alias'}              : $host->{'alias'};
+    $macros->{'$HOSTSTATEID$'}        = (defined $host->{'host_state'})              ? $host->{'host_state'}              : $host->{'state'};
+    $macros->{'$HOSTLATENCY$'}        = (defined $host->{'host_latency'})            ? $host->{'host_latency'}            : $host->{'latency'};
+    $macros->{'$HOSTOUTPUT$'}         = (defined $host->{'host_plugin_output'})      ? $host->{'host_plugin_output'}      : $host->{'plugin_output'};
+    $macros->{'$HOSTPERFDATA$'}       = (defined $host->{'host_perf_data'})          ? $host->{'host_perf_data'}          : $host->{'perf_data'};
+    $macros->{'$HOSTATTEMPT$'}        = (defined $host->{'host_current_attempt'})    ? $host->{'host_current_attempt'}    : $host->{'current_attempt'};
+    $macros->{'$HOSTCHECKCOMMAND$'}   = (defined $host->{'host_check_command'})      ? $host->{'host_check_command'}      : $host->{'check_command'};
+    $macros->{'$HOSTNOTESURL$'}       = (defined $host->{'host_notes_url_expanded'}) ? $host->{'host_notes_url_expanded'} : $host->{'notes_url_expanded'};
     $macros->{'$HOSTSTATE$'}          = $c->config->{'nagios'}->{'host_state_by_number'}->{$macros->{'$HOSTSTATEID$'}};
     $macros->{'$HOSTBACKENDID$'}      = $host->{'peer_key'};
     $macros->{'$HOSTBACKENDNAME$'}    = '';
@@ -1085,6 +1086,7 @@ sub _set_service_macros {
     $macros->{'$SERVICEATTEMPT$'}        = $service->{'current_attempt'};
     $macros->{'$SERVICECHECKCOMMAND$'}   = $service->{'check_command'};
     $macros->{'$SERVICEBACKENDID$'}      = $service->{'peer_key'};
+    $macros->{'$SERVICENOTESURL$'}       = $service->{'notes_url_expanded'};
     my $peer = defined $service->{'peer_key'} ? $self->get_peer_by_key($service->{'peer_key'}) : undef;
     if($peer) {
         $macros->{'$SERVICEBACKENDNAME$'}    = (defined $peer->{'name'}) ? $peer->{'name'} : '';
