@@ -1,6 +1,7 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
+          - add host and service notes url macros (Andrew Widdersheim)
           - Bug Fixes
             - fix accessing performance data page in author mode
             - fix accessing reports page in author mode
